--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8078
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
+
+chenminrui.demo.factory=myfactory
+chenminrui.demo.eventDemo=myEventDemo
